--- a/ReadMe.adoc
+++ b/ReadMe.adoc
@@ -39,7 +39,7 @@ Upload the code contained in this sketch on to your board
 This project is released under a {License} License.
 
 === Contributing
-To contribute to this project please contact: 
+To contribute to this project please contact: mattisritter
 
 === BOM
 Add the bill of the materials you need for this project.
